chore: add eslint and prettier setup

--- a/package.json
+++ b/package.json
@@ -6,14 +6,21 @@
     "test": "test"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "echo \"Lint\""
+    "start:dev": "nodemon --watch 'src/' --exec 'ts-node src/index.ts' -e ts"
   },
   "author": "Matheus S M Mota",
   "license": "ISC",
   "dependencies": {},
   "devDependencies": {
+    "@eslint/js": "^9.7.0",
     "@types/node": "^20.14.10",
-    "typescript": "^5.5.3"
+    "eslint": "9.x",
+    "eslint-config-prettier": "^9.1.0",
+    "globals": "^15.8.0",
+    "nodemon": "^3.1.4",
+    "prettier": "^3.3.3",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.5.3",
+    "typescript-eslint": "^7.16.0"
   }
 }
