--- a/package.json
+++ b/package.json
@@ -5,10 +5,7 @@
   "directories": {
     "test": "test"
   },
-  "scripts": {
-    "husky:prepare": "husky install",
-    "prepare": "husky"
-  },
+  "scripts": {},
   "author": "Matheus S M Mota",
   "license": "ISC",
   "dependencies": {},
@@ -18,9 +15,7 @@
     "eslint": "9.x",
     "eslint-config-prettier": "^9.1.0",
     "globals": "^15.8.0",
-    "husky": "^9.0.11",
     "lint-staged": "^15.2.7",
-    "nodemon": "^3.1.4",
     "prettier": "^3.3.3",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.3",
